--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -1,5 +1,8 @@
-<div class="container" *ngIf ="pageLoaded">
+<div class="container" *ngIf ="hasError">
+    <h3>No Data Found!</h3>
+</div>
 
+<div class="container" *ngIf ="pageLoaded">
   <div class="d-flex flex-row">
       <div class="p-2"><span class="alert alert-info"><strong>Year: </strong>{{promotion.promoyear}}</span></div>
       <div class="p-2"><span class="alert alert-info"><strong>Status: </strong> {{promotion.status}}</span></div>
