--- a/ap-client/src/app/supplier/supplier.component.html
+++ b/ap-client/src/app/supplier/supplier.component.html
@@ -12,16 +12,16 @@
   </div>
   
   <div class="d-flex flex-row-reverse" *ngIf="promotion.status === 'ACTIVE' || promotion.status === 'REJECTED'">
-        <div class="p-2">
-          <button class="btn btn-primary" (click)="promotion.isEditable=!promotion.isEditable" *ngIf="promotion.isEditable">Edit</button>
-          <button class="btn btn-primary" *ngIf="!promotion.isEditable" (click)="promotion.isEditable=!promotion.isEditable">Save</button>
-        </div>
-        <div class="p-2">
-          <button type="button" class="btn btn-warning" (click)="saveSupplierPromotion()" *ngIf="promotion.isEditable">Save</button>
-        </div>
-        <div class="p-2">
-          <button type="button" class="btn btn-success" (click)="submitSupplierPromotion()" *ngIf="promotion.isEditable">Submit</button>
-        </div>
+    <div class="p-2">
+      <button class="btn btn-primary" (click)="promotion.isEditable=!promotion.isEditable" *ngIf="promotion.isEditable">Edit</button>
+      <button class="btn btn-primary" *ngIf="!promotion.isEditable" (click)="promotion.isEditable=!promotion.isEditable">Save</button>
+    </div>
+    <div class="p-2">
+      <button type="button" class="btn btn-warning" (click)="saveSupplierPromotion()" *ngIf="promotion.isEditable">Save</button>
+    </div>
+    <div class="p-2">
+      <button type="button" class="btn btn-success" (click)="submitSupplierPromotion()" *ngIf="promotion.isEditable">Submit</button>
+    </div>
   </div>
 
     <div class="table-responsive">
@@ -57,7 +57,7 @@
                 <td *ngFor="let dm of row.dualmailers;let i = index">
                   <input *ngIf="!promotion.isEditable && ( promotion.status === 'ACTIVE' || promotion.status === 'REJECTED') " type="text" [(ngModel)]="dm.value" [readonly]="promotion.isEditable" size="1"/>
                   <p *ngIf="promotion.isEditable && ( promotion.status === 'ACTIVE' || promotion.status === 'REJECTED') " (dblclick)="editDM(rowid,i)">{{dm.value}}</p>
-                  <p *ngIf="!promotion.isEditable && promotion.status === 'SUBMITTED'">{{dm.value}}</p>
+                  <p *ngIf="!promotion.isEditable && promotion.status === 'SUBMITTED'" (dblclick)="editDM(rowid,i)">{{dm.value}}</p>
                 </td>
               </tr>
             </tbody>
