Renaming promotion modal, adding role guard for profile route

--- a/ap-client/src/app/modal/brand-promotion-modal/brand-promotion-modal.component.html
+++ b/ap-client/src/app/modal/brand-promotion-modal/brand-promotion-modal.component.html
@@ -1,5 +1,12 @@
 <div class="modal-body">
 
+  <div class="form-group row">
+    <label for="groupName" class="col-sm-2 col-form-label">Group Name:</label>
+    <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-4">
+      <input type="text" placeholder="Enter the group name"  class="form-control" >
+    </div>
+  </div>
+
   <div>
     <!-- Options to select the brand of product.  -->
     <div class="row">
