single sku component for promotion modal added

--- a/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
+++ b/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
@@ -14,7 +14,6 @@
     <app-brand-promotion-modal></app-brand-promotion-modal>
   </div>
   <div *ngIf="promotionType === 'SINGLE'">
-    <!--Add the single promotion data here -->
+    <app-sku-promotion-modal></app-sku-promotion-modal>
   </div>
-
 </div>
