Fix for saving promotion after the latest changes

--- a/ap-client/src/app/modal/brand-promotion-modal/brand-promotion-modal.component.scss
+++ b/ap-client/src/app/modal/brand-promotion-modal/brand-promotion-modal.component.scss
@@ -1,9 +1,6 @@
-.modal-dialog {
+.row {
 
-    max-width : 100%;
-    margin: 0.5rem;
-
-    .showScroll{
+    &.showScroll{
         // Hardcoded value need to find a fix
         max-height:100px;
         overflow-y: auto;
