--- a/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
+++ b/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
@@ -10,6 +10,9 @@
         (click)="showBrandPromotion($event)">Brand Promotion</a>
     </li>
   </ul>
+  <div class="row">
+    
+  </div>
   <div *ngIf="promotionType === 'BRAND'">
     <app-brand-promotion-modal></app-brand-promotion-modal>
   </div>
