--- a/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
+++ b/ap-client/src/app/modal/promotion-modal/promotion-modal.component.html
@@ -1,14 +1,14 @@
 <div class="modal-body">
 
   <ul class="nav nav-pills nav-fill">
-    <li class="nav-item">
+    <div class="nav-item" [ngClass]="tabEnabled === 'BRAND' ? 'disableAnchor' : ''">
       <a class="nav-link" [ngClass]="promotionType === 'SINGLE' ? 'active' : '' " 
-        (click)="showSinglePromotion($event)">Single Promotion</a>
-    </li>
-    <li class="nav-item">
+        (click)="showSinglePromotion($event)" >Single Promotion</a>
+    </div>
+    <div class="nav-item" [ngClass]="tabEnabled === 'SINGLE' ? 'disableAnchor' : ''">
       <a class="nav-link" [ngClass]="promotionType === 'BRAND' ? 'active' : '' " 
-        (click)="showBrandPromotion($event)">Brand Promotion</a>
-    </li>
+        (click)="showBrandPromotion($event)" >Brand Promotion</a>
+    </div>
   </ul>
   <div class="row">
     
