--- a/ap-client/src/app/modal/promotion-modal/promotion-modal.component.scss
+++ b/ap-client/src/app/modal/promotion-modal/promotion-modal.component.scss
@@ -1,6 +1,18 @@
 .modal-dialog {
-
     max-width : 100%;
     margin: 0.5rem;
-    
+}
+
+div {
+
+    a {
+        cursor: pointer;
+    }
+
+    &.disableAnchor{
+
+        a {
+            pointer-events: none;
+        }
+    }
 }
